rewrite registrarion
