# ifib/api/auth/serializers.py
@@ -1,8 +1,18 @@
 from rest_framework import serializers
 
+from ifib.enums import InterestSphereEnum
+
 
 class UserRegisterSerializer(serializers.Serializer):
-    username = serializers.CharField()
+    first_name = serializers.CharField(max_length=150)
+    middle_name = serializers.CharField(allow_null=True, max_length=150)
+    last_name = serializers.CharField(max_length=150)
+    birth_date = serializers.DateField(input_formats=['%d.%m.%Y'])
+    mobile_phone = serializers.CharField()
+    social_network = serializers.URLField()
+    grade = serializers.CharField()
+    sphere_of_interest = serializers.ChoiceField(choices=InterestSphereEnum.choices())
+    email = serializers.EmailField()
     password = serializers.CharField()
     password_2 = serializers.CharField()
 
